--- a/pages/cash/cash.wxss
+++ b/pages/cash/cash.wxss
@@ -203,6 +203,7 @@ page{
 }
 
 .getMobile{
+   position: relative;
    font-size: 28rpx;
    width: 36%;
    text-align: center;
@@ -215,7 +216,12 @@ page{
 }
 
 .getButton{
-  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0); 
+  width: 100%;
+  height: 100%;
 }
 
 .getButton::after{
@@ -296,4 +302,17 @@ page{
   border: 2rpx solid #858585;
   border-radius: 10rpx;
   padding: 8rpx 10rpx;
+}
+
+.aliPayImgDiv{
+   width: 8%;
+   height: 120rpx;
+   line-height: 120rpx;
+   text-align: center;
+   margin-top: 2rpx;
+}
+
+.aliPayImg{
+  width: 70%;
+  height:38%;
 }
