--- a/pages/courseList/courseList.wxml
+++ b/pages/courseList/courseList.wxml
@@ -52,4 +52,7 @@
       </view>
 </view>
 
+<!-- 登录按钮 -->
+<button class='login_button' wx:if="{{login_button}}" open-type='getUserInfo' bindgetuserinfo='wechatLogin'>获取课程信息</button>
+
 </view>
