--- a/pages/activeDetail/activeDetail.wxml
+++ b/pages/activeDetail/activeDetail.wxml
@@ -57,7 +57,7 @@
         {{filter.active_target(active.days, active.target, active.value)}}
       </view>
     </view>
-    <view class='active-row' wx:if='{{active.reslut && (active.target=="A" || active.result=="B")}}'>
+    <view class='active-row' wx:if='{{active.result && (active.target == "A" || active.result == "B")}}'>
       <view class='active-row-left'>
         <image src='{{base_picture_url}}/201805100423.png' mode='aspectFill' wx:if='{{!active.result}}'>
         </image>
@@ -113,12 +113,15 @@
         <view class='active-row-left'>
           结束体重
         </view>
-        <view class='active-row-right' wx:if='{{active.result != 3}}'>
+        <view class='active-row-right' wx:if='{{active.result == 0}}'>
           请在结束后输入体重
         </view>
         <view class='active-row-right' wx:if='{{active.result == 3}}'>
           <input type='number' bindinput='getInputValue' placeholder='请在挑战结束后输入体重'>
           </input>
+        </view>
+        <view class='active-row-right' wx:if='{{active.result == 1 || active.result == 2}}'>
+          {{active.lastWeight}}
         </view>
       </view>
       <view class='active-row' wx:if='{{active.target == "C" || active.target == "D"}}'>
@@ -130,7 +133,7 @@
         </view>
       </view>
     </view>
-    <view class='resultImage' wx:if='{{active.result != 3}}'>
+    <view class='resultImage' wx:if='{{active.result && active.result != 3}}'>
       <image src='{{base_picture_url}}/{{active.resultImage}}'>
       </image>
       <view class='resultTip'>{{active.resultTip}}</view>
