--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -1,25 +1,45 @@
+<!-- 引入过滤器 -->
+<wxs module="filter" src="../../utils/filters.wxs"></wxs>
 <view class='wraper'>
   <view class='productInfo'>
-    <view class='productImage'>
-      <image src='{{base_picture_url}}/{{product.image1}}' mode='aspectFill'></image>
+    <view class='productInfo-backgroundImage'>
+      <image src='{{base_picture_url}}/{{product.image1}}' mode='aspectFill'>
+      </image>
+      <view class='productInfo-content'>
+        <image src='{{base_picture_url}}/{{product.image1}}' mode='aspectFill' 
+            class='productInfo-content-left'>
+        </image>
+        <view class='productInfo-content-right'>
+          <view class='sell-out'>已售{{product.sell_out}}</view>
+          <view class='productName'>{{product.name}}</view>
+          <view class='days'>有效期{{product.wellNum}}天</view>
+        </view>
+      </view>
     </view>
-    <view class='productName'>
-      {{product.name}}
+    <view style='height:10px;background-color:#F0F0F2;'></view>
+    <view class='product-row'>
+      <view class='product-row-left'>价格</view>
+      <view class='product-row-right ff4401'>
+        <text style='font-size:10px;'>¥</text>
+        {{filter.toFixed(product.cost, 2)}}
+      </view>
     </view>
-    <view class='productWellNum'>
-      <view class='productWellNum-left'>有效期</view>
-      <view class='productWellNum-right'>{{product.wellNum}}天</view>
-    </view>
-    <view class='productPrice'>
-      <view class='productPrice-left'>价格</view>
-      <view class='productPrice-right'>
-        ¥{{product.cost}}元
+    <view class='product-row'>
+      <view class='product-row-left'>适用店面</view>
+      <view class='product-row-right fitClub'>
+        <view class='fitClub-left'>64家</view>
+        <view class='fitClub-right'>
+          <image src='{{base_picture_url}}/more.png' mode='aspectFill'></image>
+        </view>
       </view>
     </view>
   </view>
   <view style='height:10px;background-color:#F0F0F2;'></view>
   <view class='productRemark'>
-    <rich-text nodes='{{product.remark}}'></rich-text>
+    服务说明
+    <view>
+      <rich-text nodes='{{product.remark}}'></rich-text>
+    </view>
   </view>
   <view class='productStrartTime'>
     <picker class='selectStartTime' mode="date" value="{{product.currentDate}}" 
