--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -12,56 +12,105 @@ page{
   color: #FFF;
 }
 
-.productImage{
-  height: 171px;
+.productInfo-backgroundImage{
+  position: relative;
+  height: 147.6px;
 }
 
-.productImage > image{
+.productInfo-backgroundImage > image{
   width: 100%;
   height: 100%;
 }
 
+.productInfo-content{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 8% 5%;
+  width: 90%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.productInfo-content-left{
+  float: left;
+  width: 120px;
+  height: 90px;
+  border-radius: 10px;
+}
+
+.productInfo-content-right{
+  float: left;
+  margin-left: 10px;
+}
+
+.ff4401{
+  color: #FF4401;
+}
+
+.fitClub{
+  position: relative;
+  color: #BBB;
+}
+
+.fitClub-left{
+  float: left;
+}
+
+.fitClub-right{
+  float: right;
+}
+
+.fitClub-right > image{
+  width: 20px;
+  height: 20px;
+}
+
+.sell-out{
+  margin-top: 5px;
+  width: 40px;
+  text-align: center;
+  font-size: 12px;
+  color: #FF4401;
+  border: 1px solid #FF4401;
+  border-radius: 20px;
+}
+
 .productName{
+  margin-top: 10px;
+  font-size: 16px;
+  color: #FFF;
+}
+
+.days{
+  margin-top: 10px;
+  font-size: 12px;
+  color: #FFF;
+}
+
+.product-row{
   padding: 10px;
+  overflow: hidden;
+  font-size: 14px;
   color: #444;
   border-bottom: 1px solid #F0F0F2;
 }
 
-.productWellNum{
-  padding: 10px;
-  overflow: hidden;
-  font-size: 12px;
-  color: #BBB;
-  border-bottom: 1px solid #F0F0F2;
-}
-
-.productWellNum-left{
+.product-row-left{
   float: left;
 }
 
-.productWellNum-right{
+.product-row-right{
   float: right;
-}
-
-.productPrice{
-  padding: 10px;
-  overflow: hidden;
-  font-size: 12px;
-  color: #BBB;
-}
-
-.productPrice-left{
-  float: left;
-}
-
-.productPrice-right{
-  float: right;
-  color: #FB8C00;
 }
 
 .productRemark{
   padding: 10px;
-  color: #BBB;
+  color: #444;
+}
+
+.productRemark > view{
+  padding: 10px;
+  font-size: 12px;
 }
 
 .productStrartTime{
@@ -86,13 +135,13 @@ page{
   float: left;
   margin-left: 20px;
   font-size: 12px;
-  color: #BBB;
+  color: #444;
 }
 
 .selectStartTime-right{
   float: left;
   margin-left: 20px;
-  color: #0076FF;
+  color: #FB8C00;
 }
 
 .goBuy{
