wechatLogin、我的预约页面

--- a/pages/courseList/courseList.wxml
+++ b/pages/courseList/courseList.wxml
@@ -53,6 +53,6 @@
 </view>
 
 <!-- 登录按钮 -->
-<button class='login_button' wx:if="{{login_button}}" open-type='getUserInfo' bindgetuserinfo='wechatLogin'>获取课程信息</button>
+<button class='login_button' wx:if="{{login_button}}" open-type='getUserInfo' bindgetuserinfo='wechatLogin'></button>
 
 </view>
