--- a/pages/courseList/courseList.wxss
+++ b/pages/courseList/courseList.wxss
@@ -140,12 +140,11 @@ page{
 
 .login_button{
   position: fixed;
-  top: 40%;
-  left: 40%;
+  top: 0;
+  left: 0;
   z-index: 1;
-  width: 200rpx;
-  height: 200rpx;
-  border-radius: 50%;
-  background-color: #41B44B;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
 }
 
