--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -99,3 +99,26 @@ page{
     color: #5B5A5B;
     font-size: 28rpx;
 }
+
+.login{
+  float: left;
+  margin-left: 35%;
+  margin-top: -34%;
+  width: 50%;
+  height: auto;
+}
+
+.login_div{
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.login_button{
+  width: 80%;
+  height: 80%;
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  line-height: 160rpx;
+  background-color: #41B44B;
+}
