--- a/pages/myAppointment/myAppointment.wxss
+++ b/pages/myAppointment/myAppointment.wxss
@@ -3,3 +3,62 @@ page{
   height: 100%;
   background-color: #EFEFF1;
 }
+
+
+.pre {
+  overflow: hidden;
+  padding: 30rpx 20rpx;
+  background-color: white;
+  border-top: 2rpx solid #BABABA;
+  position: relative;
+}
+
+.pre:last-child{
+  border-bottom: 2rpx solid #BABABA;
+}
+
+.left {
+  float: left;
+  left: 0;
+  bottom: 0;
+}
+
+
+.imgDiv{
+  width: 160rpx;
+  height: 100rpx;
+}
+
+.img{
+  width: 100%;
+  height: 100%;
+}
+
+.title{
+  font-size: 24rpx;
+  font-weight: 600;
+}
+
+.value{
+  font-size: 24rpx;
+  color: #9B949B;
+}
+
+.centerInfo{
+  margin-left: 20rpx;
+}
+
+.coachName{
+  padding: 5rpx 0;
+}
+
+.cancel{
+  position: absolute;
+  right: 20rpx;
+  bottom: 60rpx;
+  background-color: #FE970F;
+  color: white;
+  padding:10rpx 30rpx;
+  font-size: 24rpx;
+  border-radius: 5rpx;
+}
