--- a/pages/bindAccount/bindAccount.wxml
+++ b/pages/bindAccount/bindAccount.wxml
@@ -27,7 +27,7 @@
                         <view class="line">
                               <view class="left title">卡号：</view>
                               <view class="left cardNumber">
-                                    <input class="input" bindinput='unionAccountInput'></input>
+                                    <input class="input" type='number' bindinput='unionAccountInput'></input>
                               </view>
                         </view>
 
@@ -70,7 +70,7 @@
                         <view class="mobilecode">
                               <!-- 验证码输入框 -->
                               <view class="left codeInput">
-                                    <input bindinput="mobilecodeInput"  placeholder="请输入短信验证码" placeholder-class="codePlaceholder"></input>
+                                    <input bindinput="mobilecodeInput" type='number' placeholder="请输入短信验证码" placeholder-class="codePlaceholder"></input>
                               </view>
                               
                               <!-- 获取验证码按钮 -->
