--- a/pages/cash/cash.wxml
+++ b/pages/cash/cash.wxml
@@ -84,7 +84,7 @@
 
                           <!-- input框 -->
                           <view class="left input">
-                                <input bindinput="cashMoneyInput" placeholder-class="inputplaceholder" value="{{inputMoney}}" placeholder="请输入您的提现金额" ></input>
+                                <input bindinput="cashMoneyInput" type="digit" placeholder-class="inputplaceholder" value="{{inputMoney}}" placeholder="请输入您的提现金额" ></input>
                           </view>
 
                           <!-- button -->
@@ -122,7 +122,7 @@
             <view class="mobilecode">
                   <!-- 验证码输入框 -->
                   <view class="left codeInput">
-                        <input bindinput="mobilecodeInput"  placeholder="请输入短信验证码" placeholder-class="codePlaceholder"></input>
+                        <input bindinput="mobilecodeInput"  type="number" placeholder="请输入短信验证码" placeholder-class="codePlaceholder"></input>
                   </view>
                   
                   <!-- 获取验证码按钮 -->
