--- a/utils/filters.wxs
+++ b/utils/filters.wxs
@@ -87,6 +87,18 @@ var filters = {
       }
 
       return str;
+    },
+
+    /**
+     * 价格过滤
+     */
+    getPriceStr: function (str) {
+      if (str == "" || str == "null" || str == null || str == "undefined" || str == undefined || parseInt(str) == 0) {
+         str = "免费";
+      } else {
+         str = parseFloat(str).toFixed(2) + "元";
+      }
+      return str;
     }
 
 }
@@ -99,5 +111,6 @@ module.exports = {
   week_date: filters.week_date,
   stringNull: filters.stringNull,
   getStarNumberStr:filters.getStarNumberStr,
-  getStarNumberStrMix:filters.getStarNumberStrMix
+  getStarNumberStrMix:filters.getStarNumberStrMix,
+  getPriceStr:filters.getPriceStr
 }
