--- a/pages/memberEvaluate/memberEvaluate.wxss
+++ b/pages/memberEvaluate/memberEvaluate.wxss
@@ -1,3 +1,7 @@
+page{
+  background-color: #F0F0F2;
+}
+
 .club-wraper{
   position: relative;
   height: 147px;
@@ -40,7 +44,7 @@
 }
 
 .clubName{
-  margin-top: 5px;
+  margin-top: 10px;
   font-size: 16px;
   color: #FFF;
 }
@@ -49,4 +53,208 @@
   margin-top: 10px;
   font-size: 12px;
   color: #FFF;
+}
+
+.evaluateTotalityStarts{
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.evaluateTotalityStarts > image{
+  float: left;
+  margin-right: 10px;
+  width: 15px;
+  height: 15px;
+}
+
+.evaluateOtherScoreText{
+  margin-top: 10px;
+  font-size: 12px;
+  color: #FFF;
+}
+
+.signDate{
+  padding: 10px;
+  overflow: hidden;
+  background-color: #FFF;
+}
+
+.signDate-left{
+  float: left;
+  font-size: 14px;
+  color: #444;
+}
+
+.signDate-right{
+  float: right;
+  font-size: 14px;
+  color: #FF4401;
+}
+
+.evaluateForm{
+  background-color: #FFF;
+}
+
+.evaluateScore{
+  padding: 10px;
+  overflow: hidden;
+  border-bottom: 1px solid #F0F0F2;
+}
+
+.evaluateScore-left{
+  float: left;
+  font-size: 14px;
+  color: #444;
+  overflow: hidden
+}
+
+.evaluateScore-left-title{
+  float: left;
+}
+
+.evaluateScore-left-content{
+  float: left;
+  height: 20px;
+  margin-left: 20px;
+}
+
+.evaluateScore-left-content > image{
+  margin-right: 5px;
+  width: 20px;
+  height: 20px;
+}
+
+.evaluateScore-right{
+  float: right;
+  font-size: 14px;
+  color: #444;
+}
+
+.evaluateOtherScore{
+  border-bottom: 1px solid #F0F0F2;
+}
+
+.evaluateOtherScore-content{
+  padding: 10px;
+  overflow: hidden;
+}
+
+.evaluateOtherScore-content-left{
+  float: left;
+  font-size: 12px;
+  color: #444;
+  overflow: hidden;
+}
+
+.evaluateOtherScore-content-left-title{
+  float: left;
+}
+
+.evaluateOtherScore-content-left-content{
+  float: left;
+  margin-left: 20px;
+}
+
+.evaluateOtherScore-content-left-content > image{
+  margin-right: 5px;
+  width: 15px;
+  height: 15px;
+}
+
+.evaluateOtherScore-content-right{
+  float: right;
+  font-size: 12px;
+  color: #444;
+}
+
+.evaluateInput{
+  padding: 10px;
+  border-bottom: 1px solid #F0F0F2;
+}
+
+.evaluateInput > textarea{
+  width: 100%;
+  height: 100px;
+  font-size: 14px;
+  color: #444;
+}
+
+.evalulteUploadFile{
+  padding: 5px;
+  height: 30px;
+}
+
+.evalulteUploadFile > image{
+  width: 30px;
+  height: 30px;
+}
+
+.memberEvaluate{
+  background-color: #FFF;
+}
+
+.memberInfo{
+  padding: 10px;
+  overflow: hidden;
+}
+
+.memberInfo-image{
+  float: left;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+
+.memberInfo-content{
+  float: left;
+  margin-left: 10px;
+}
+
+.memberName{
+  font-size: 14px;
+  color: #444;
+}
+
+.memberSignCount{
+  font-size: 12px;
+  color: #BBB;
+}
+
+.evaluateTime{
+  float: right;
+  height: 35px;
+  line-height: 35px;
+  font-size: 12px;
+  color: #BBB;
+}
+
+.evaluateContent{
+  padding: 0 10px;
+  font-size: 14px;
+  color: #444;
+}
+
+.evaluateImages{
+  padding: 10px 0;
+  overflow: hidden;
+}
+
+.evaluateImages > image{
+  float: left;
+  margin-left: 10px;
+  width: 90px;
+  height: 90px;
+}
+
+.submitEvaluate{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 14px;
+  color: #FFF;
+  background-color: #FF9800;
 }
