--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -44,7 +44,7 @@
     </view>
     <view class='memberRanking' bindtap='memberRanking'>
       <image src='{{base_picture_url}}/201805042235.png'></image>
-      <view>会员排名</view>
+      <view>会员排行</view>
     </view>
     <view class='live' bindtap='live'>
       <image src='{{base_picture_url}}/201805042236.png'></image>
