--- a/pages/memberRanking/memberRanking.wxss
+++ b/pages/memberRanking/memberRanking.wxss
@@ -48,6 +48,13 @@ page{
 .ranking{
   height: 30px;
   line-height: 30px;
+  font-size: 12px;
+}
+
+.ranking > image{
+  margin-left: 12px;
+  width: 27px;
+  height: 30px;
 }
 
 .memberInfo{
