--- a/pages/ticket/ticket.wxss
+++ b/pages/ticket/ticket.wxss
@@ -7,6 +7,7 @@ page{
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: #F2F2F2;
 }
 
 .no-data{
@@ -33,29 +34,96 @@ page{
 
 .ticket-content{
   float: left;
-  width: 100%;
+  width: 80%;
   height: 90px;
   background-color: #FFF;
   margin-bottom: 20rpx;
 }
 
-.ticket-content > image{
+.ticket-content-wraper{
+  padding: 10px;
+}
+
+.ticket-name{
+  font-size: 16px;
+}
+
+.ticket-type{
+  margin-top: 10px;
+  font-size: 12px;
+  color: #8f8e8e;
+}
+
+.limitPrice{
+  margin-left: 10px;
+  font-size: 12px;
+  color: #8f8e8e;
+}
+
+.ticket-validity{
+  margin-top: 10px;
+  font-size: 14px;
+  color: #8f8e8e;
+}
+
+.ticket-price{
+  position: relative;
+  float: right;
+  width: 20%;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
+  background-color: #FF6600;
+  font-size: 16px;
+  color: #FFF;
+}
+
+.ticket-price > image{
   width: 100%;
-  height: 80px;
+  height: 100%;
+}
+
+.price-text{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  color: #FFF;
+}
+
+.RMB{
+    font-size: 22rpx;
+    color: white;
+}
+
+.activeTicket-div{
+   position: fixed;
+   width: 100%;
+   left: 0;
+   bottom: 0;
+
+}
+
+.goNow{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  font-size: 12px;
 }
 
 .activeTicket{
-   position: fixed;
-   left: 4%;
-   bottom: 0;
-   background: #FF9800;
+   margin: 0 auto;
+   height: 44px;
+   line-height: 44px;
+   text-align: center;
    color: white;
    font-size: 32rpx;
-   width: 92%;
-   padding-top: 30rpx;
-   padding-bottom: 30rpx;
-   border-radius: 10rpx;
-   margin: 0 auto;
-   text-align: center;
-   margin-bottom: 26rpx;
+   background: #FF9800;
 }
