--- a/pages/myWallet/myWallet.wxss
+++ b/pages/myWallet/myWallet.wxss
@@ -8,8 +8,8 @@ page{
   width: 100%;
   height: auto;
   overflow: hidden;
-  border-top: 2rpx solid #BABABA;
-  border-bottom: 2rpx solid #BABABA;
+  border-top: 2rpx solid #f0f2f2;
+  border-bottom: 2rpx solid #f0f2f2;
 }
 
 .swiper-tab-item{
@@ -32,7 +32,7 @@ page{
     width: 100%;
     height: 30rpx;
     background-color: #EFEFF1;
-    border-bottom: 2rpx solid #BABABA;
+    border-bottom: 2rpx solid #f0f2f2;
 }
 
 swiper-item{
@@ -43,7 +43,7 @@ swiper-item{
   width: 94%;
   margin: 0 auto;
   padding: 20rpx 0;
-  border-bottom: 2rpx solid #BABABA;
+  border-bottom: 2rpx solid #f0f2f2;
 }
 
 .line{
