--- a/pages/courseDeal/courseDeal.wxml
+++ b/pages/courseDeal/courseDeal.wxml
@@ -50,14 +50,17 @@
              </view>
        </view>
 
-       <!-- 确定按钮 -->
-       <view class="sure" wx:if="{{isFree}}" bindtap="appointment">
-          预约
-       </view>
+      <!-- 满员就不显示按钮了 -->
+      <view wx:if="{{course.joinNum < course.total}}">
+            <!-- 确定按钮 -->
+            <view class="sure" wx:if="{{isFree}}" bindtap="appointment">
+                预约
+            </view>
 
-       <!-- 支付按钮 -->
-       <view class='sure' wx:if="{{!isFree}}" bindtap='gotoBuy'>
-          支付
-       </view>
+            <!-- 支付按钮 -->
+            <view class='sure' wx:if="{{!isFree}}" bindtap='gotoBuy'>
+                支付
+            </view>
+      </view>
 
 </view>
